--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -4,9 +4,10 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-feature android:name="android.hardware.camera"
-        android:required="true" />
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -14,16 +15,27 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".NewPost" />
-        <activity android:name=".PostPreview" />
-        <activity android:name=".Post"></activity>
+        <activity
+            android:name=".NewPost"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".PostPreview"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Post"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Success"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
